...
                )
                GeneralButton(
                    text = "Social",
                    modifier = Modifier
                        .weight(1f)
                        .padding(horizontal = 6.dp)
                        .testTag("tabSocial"),
                    fontSize = 14.sp,
                    color = colorFollowing,
                    onClick = {
                        HeaderButtonPressed()
                    }
                )
...
